ola-parser/src/testdata/syntaxTests/constants/mapping_constant.sol
mapping(u256 => u256) constant b = b;
// ----
// TypeError 9259: (0-36): Only constants of value type and byte array type are implemented.
